accomplish the code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1>Story Component</h1>
+<div class="ui menu">
+  <a routerLink="home" routerLinkActive="active" class="item">Home</a>
+  <a routerLink="add-story" routerLinkActive="active" class="item">Add Story</a>
+</div>
 <router-outlet></router-outlet>
